<resources>
    <string name="app_name">Mon Grammaire</string>
    <string name="parametres">Parametres</string>
    <string name="entrer">ENTRER</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Traduction</string>
    <string name="action_about">Info</string>
    <string name="menu_home">Dictionnaire</string>
    <string name="menu_gallery">List de cours</string>
    <string name="menu_slideshow">Favories</string>
    <string name="menu_tools">sur nous !</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="toolbar_title">Conjugaison</string>
    <string name="action_search">chercher le verbe</string>
    <string name="search_hint">ecrit le verbe …</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navdrawer">NAVDRAWER</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="txt1">Leçon 1</string>
    <string name="les_pronons_relatives">Les pronons relatives !</string>
    <string name="todo">TODO</string>
    <string name="btm">Mon Grammaire</string>
    <string name="partie_numero_1">partie numero 1</string>
    <string name="textview">TextView</string>
    <string name="title_activity_level1">level1</string>
    <string name="d_marrer">démarrer</string>
    <string name="title_activity_level2">level2</string>
    <string name="title_activity_level3">level3</string>
    <string name="title_activity_test">test</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_testi">testi</string>
    <string name="recents">Acceuil</string>
    <string name="favorites">Rapport</string>
    <string name="nearby">Info !</string>
    <string name="title_activity_teeeeeeeeeeeeee">teeeeeeeeeeeeee</string>
    <string name="hello_blank_fragment_2">Hello blank fragment 2</string>
    <string name="txt_details">La grammaire1 est l\'étude systématique des éléments constitutifs d\'une langue2. Par extension, on nomme aussi grammaire un manuel ou un ensemble de documents décrivant des règles grammaticales.</string>
    <string name="title_activity_time__up">Time_Up</string>
    <string name="question">Question</string>
    <string name="play_again">Rejouer</string>
    <string name="time">15</string>
    <string name="correct">Correct</string>
    <string name="wrongans">Oups, la réponse était incorrecte</string>
    <string name="timeup">Temps écoulé</string>
    <string name="play_game">Jouer</string>
    <string name="quit">Quitter</string>
    <string name="next">Suivant</string>
    <string name="cancel">✖</string>
    <string name="d">D</string>
    <string name="c">C</string>
    <string name="e">E</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="j">J</string>
    <string name="no_connection">Pas de connexion Internet! Ne peut être traduit!</string>
    <string name="about_page_description" translatable="false">Bienvenue dans notre application de grammaire ! Nous avons conçu cette application pour vous aider à améliorer vos compétences en grammaire. Vous trouverez des exercices interactifs, des explications détaillées des règles grammaticales et des exemples pour vous aider à comprendre comment utiliser correctement les différents éléments de la grammaire. Nous espérons que vous apprécierez cette application et que vous progresserez rapidement dans votre maîtrise de la grammaire.</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="about_contact_us">Contact us</string>
    <string name="about_instagram">Follow us on Instagram</string>
    <string name="about_facebook">Like us on Facebook</string>
    <string name="about_play_store">Rate us on the Play Store</string>
    <string name="about_youtube">Watch us on Youtube</string>
    <string name="about_twitter">Follow us on Twitter</string>
    <string name="about_github">Fork us on GitHub</string>
    <string name="about_website">Visit our website</string>
    <string name="search">Search</string>
    <string name="le_quiz">Le Quiz</string>
    <string name="plus">Plus</string>
    <string name="recherche">Recherche</string>
    <string name="quiz">Quiz</string>
    <string name="acceuil">Acceuil</string>
    <string name="welcome">Bienvenue dans votre Grammaire</string>
    <string name="streak_format">Bienvenue !\n🔥 Streak: %1$d jours</string>
    <string name="level_format">%1$d/8</string>
    <string name="menu_desc">Ouvrir le menu de navigation</string>
    <string name="title_activity_verbe_details">verbeDetails</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="SplashScreenActivity">Mon Grammaire</string>
    <string name="action_example_with_sliding_list">Search ...</string>
    <string name="tous_les_cours">Tous les cours</string>
    <string name="hello_user">Bonjour, %1$s !</string>
    <string name="overall_progress">Progression globale : %1$d%%</string>
    <string name="lessons_completed">%1$d leçons complétées</string>
    <string name="accuracy_format">%1$d%% de bonnes réponses</string>
    <string name="tcf_simulation_title">Simulation Réelle des Cours</string>
    <string name="tcf_simulation_msg">Vous allez démarrer une simulation basée sur les leçons de l\'application.\n\n• Questions extraites des exemples\n• Temps limité : 45 minutes\n\nVoulez-vous commencer ?</string>
    <string name="commencer">Commencer</string>
    <string name="annuler">Annuler</string>
    <string name="quitter_simulation_title">Quitter la simulation ?</string>
    <string name="quitter_simulation_msg">Votre progression sera perdue. Voulez-vous vraiment quitter ?</string>
    <string name="continuer">Continuer</string>
    <string name="error_no_content">Erreur : pas assez de contenu pour générer une simulation.</string>
    <string name="simulation_status">SIMULATION • %1$d / %2$d</string>
    <string name="final_score">Score: %1$d / %2$d</string>
    <string name="level_estimate">Niveau estimé : %1$s</string>
    <string name="time_up_msg">Temps écoulé !</string>
    <string name="choose_answer">Veuillez choisir une réponse</string>
    <string name="training_finished">Entraînement terminé</string>
    <string name="training_finished_msg">Votre score : %1$d / %2$d\n\nContinuez à vous entraîner pour améliorer votre niveau !</string>
    <string name="no_questions_available">Aucune question disponible pour ce module.</string>
    <string name="question_progress">Question %1$d / %2$d</string>
    <string name="quitter_training_title">Quitter l\'entraînement ?</string>
    <string name="quitter_training_msg">Voulez-vous vraiment quitter cette session d\'entraînement ?</string>
    <string name="terminer">Terminer</string>
    <string name="version_format">Version %1$s</string>
    <string name="advertise_with_us">Annoncer avec nous</string>
    <string name="connect_with_us">Connecte-toi avec nous</string>
    <string name="email_required">Email requis</string>
    <string name="password_required">Mot de passe requis</string>
    <string name="login_success">Connexion réussie</string>
    <string name="login_failed_prefix">Échec de la connexion: </string>
    <string name="unknown_error">Erreur inconnue</string>
    <string name="firebase_init_error">Erreur d\'initialisation Firebase. Vérifiez google-services.json</string>
    <string name="dictionnaire">Dictionnaire</string>
    <string name="favoris">Favoris</string>
    <string name="analyses_stats">Analyses &amp; Statistiques</string>
    <string name="lecons_maitrisees">Leçons maîtrisées</string>
    <string name="score_precision">Score de précision</string>
    <string name="lecon_du_jour">LEÇON DU JOUR</string>
    <string name="ready_for_lesson">Prêt pour votre leçon du jour ?</string>
    <string name="reprendre_lecon">Reprendre la leçon</string>
    <string name="modules_cours">Modules de cours</string>
    <string name="parcours_recommande">Parcours recommandé</string>
    <string name="defi_eclair">Défi Éclair</string>
    <string name="defi_eclair_desc">60 secondes pour tester vos réflexes.</string>
    <string name="attention">Attention !</string>
    <string name="exemple">Exemple</string>
    <string name="regle">La Règle</string>
    <string name="appuyez_voir_reponse">Appuyez pour voir la réponse</string>
    <string name="carte_epinglee">Carte épinglée !</string>
    <string name="copie_presse_papiers">Copié dans le presse-papiers</string>
    <string name="rechercher_mot">Rechercher un mot...</string>
    <string name="aucun_resultat">Aucun résultat trouvé</string>
    <string name="essayez_autres_mots">Essayez d\'autres mots-clés</string>
    <string name="fermer">Fermer</string>
    <string name="profil_bientot">Profil bientôt disponible !</string>
    <string name="dark_mode">Mode Sombre</string>
    <string name="progression_format">Progression : %1$d%%</string>
    <string name="added_to_favorites">Ajouté aux favoris</string>
    <string name="removed_from_favorites">Retiré des favoris</string>
    <string name="reset_progress_title">Réinitialiser</string>
    <string name="reset_progress_msg">Voulez-vous réinitialiser votre progression pour cette leçon ?</string>
    <string name="oui">Oui</string>
    <string name="progress_reset">Progression réinitialisée</string>
    <string name="create_account">Créer un compte</string>
    <string name="full_name">Nom complet</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="register">S\'inscrire</string>
    <string name="already_have_account">Déjà un compte ? </string>
    <string name="login">Se connecter</string>
    <string name="retour">Retour</string>
    <string name="logo">Logo</string>
    <string name="time_format">%1$ds</string>
    <string name="score_format">Score: %1$d</string>
    <string name="xp_format">Score : %1$d XP</string>
    <string name="accuracy_correct_format">Précision : %1$d bonnes réponses</string>
    <string name="new_high_score">NOUVEAU RECORD ! 🏆</string>
    <string name="time_attack_end_title">Temps écoulé !</string>
    <string name="revisions_du_jour">Révisions du jour</string>
    <string name="lecons_a_reviser">%1$d leçons à réviser</string>
    <string name="reviser">Réviser</string>
    <string name="verbes">Verbes</string>
    <string name="revisions_bientot">Révisions SRS bientôt disponibles !</string>
</resources>