<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ac"
            android:icon="@drawable/house"
            android:title="@string/acceuil" />

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/search"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/list"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_tcf"
            android:icon="@drawable/ic_book"
            android:title="Préparation TCF" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/favorite"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/info"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Autres">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/search"
                android:title="@string/recherche" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/star"
                android:title="@string/quiz" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_close"
                android:title="Déconnexion" />
        </menu>
    </item>

</menu>
